added Generic Records profile, more gui reworking ahead

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/weblaf-complete-1.28.jar" sourcepath="C:/Users/Student/Documents/code/weblaf-complete-1.28.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/LGoodDatePicker-10.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
