--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="images"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/bagit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/weblaf-complete-1.28.jar" sourcepath="C:/Users/Student/Documents/code/weblaf-complete-1.28.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/json-20180130.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/LGoodDatePicker-10.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Student/Documents/code/weblaf-complete-1.28.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
